Fix sortig on appointments table.

--- a/front-end/src/app/home/appointments/appointments.component.html
+++ b/front-end/src/app/home/appointments/appointments.component.html
@@ -46,7 +46,7 @@
 </div>
 <div class="row">
 	<div style="margin-bottom: 10px">
-		<table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
+		<table mat-table [dataSource]="dataSource" matSort matSortActive="local" matSortDirection="asc">
 			<!-- Local Column -->
 			<ng-container matColumnDef="local">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header>Local</th>
